--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "radium": "^0.19.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-shuffle": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
